2007-07-31  Veerapuram Varadhan <vvaradhan@novell.com>

	* NEWS, configure.in: Evolution Exchange 2.11.6.1 release
	
2007-07-31  Veerapuram Varadhan  <vvaradhan@novell.com>

	* camel/camel-exchange-folder.c: (get_message): Check for Sender
	and Mailing list fields, if Sender alone exist, add
	X-Evolution-Mail-From-Delegate header that would be handled by
	Evolution, while formatting the message.

	* camel/camel-exchange-summary.c: Disable d(x)

2007-07-30  Veerapuram Varadhan <vvaradhan@novell.com>

	* NEWS, configure.in: Evolution Exchange 2.11.6 release
	
2007-07-30  Chenthill Palanisamy  <pchenthill@novell.com>

	* camel/camel-exchange-folder.c: (get_message): Removed all the 
	unnecessary piece of code. 

	Committing on behalf of Bharath Acharya <abharath@novell.com>	

2007-07-27  Matthew Barnes  <mbarnes@redhat.com>

	* configure.in:
	Collect all the required package versions in one place and
	explicitly require GTK+ 2.10 or higher.  (#380534)

2007-07-09  Srinivasa Ragavan  <sragavan@novell.com>

	* NEWS, configure.in: Evolution Exchange 2.11.5 release

2007-09-09  Matthew Barnes  <mbarnes@redhat.com>

	* calendar/e-cal-backend-exchange-calendar.c
	(process_delegated_cal_object), (find_attendee_prop):
	* camel/camel-exchange-folder.c (get_message):
	* mail/mail-stub-exchange.c (mse_get_folder_online_sync_updates):
	* mail/mail-utils.c (mail_util_demangle_delegated_meeting),
	(mail_util_demangle_delegated_meeting):
	Fix newly introduced compiler warnings as well as a memory leak.

2007-07-09  Chenthill Palanisamy  <pchenthill@novell.com>

	reviewed by: Veerapuram Varadhan <vvaradhan@novell.com>

	* calendar/e-cal-backend-exchange-calendar.c:
	(process_delegated_cal_object), (find_attendee_prop),
	(create_object), (modify_object_with_href):
	* calendar/e-cal-backend-exchange.c: (get_cal_owner),
	(e_cal_backend_exchange_get_sender),
	(e_cal_backend_exchange_get_sender_string),
	(e_cal_backend_exchange_get_owner_name):
	* calendar/e-cal-backend-exchange.h: